Fix file icon being too big

--- a/chrome/skin/manager/style.css
+++ b/chrome/skin/manager/style.css
@@ -360,7 +360,7 @@ treechildren::-moz-tree-image(iconic,addbutton) {
  treechildren::-moz-tree-image(iconic) {
   list-style-image: url(icons@2x.png);
   -moz-image-region: rect(32px,96px,64px,64px);
-  width: 32px !important;
+  width: 16px !important;
  }
  treechildren::-moz-tree-image(iconic,canceled) {
   -moz-image-region: rect(0px,128px,32px,96px);
